force-app/main/default/objects/E2CP__casepref__c/E2CP__casepref__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Email to Case Premium Settings</label>
</CustomObject>