force-app/main/default/objects/E2CP__casepref__c/fields/E2CP__prefval__c.field-meta.xml
<CustomField>
    <fullName>E2CP__prefval__c</fullName>
    <description>Value for this setting.</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>