force-app/main/default/objects/E2CP__casepref__c/fields/E2CP__Variant_Of__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Variant_Of__c</fullName>
    <description>When Category is &quot;variation&quot; this field represents which Email to Case Premium Setting Name or Category this setting is a variant of. The Name of a setting variant will contain the ID of the Email to Case Premium Variation.</description>
    <label>Variant Of</label>
    <length>38</length>
    <type>Text</type>
</CustomField>