force-app/main/default/objects/E2CP__casepref__c/listViews/E2CP__AllPrefs.listView-meta.xml
<ListView>
    <fullName>E2CP__AllPrefs</fullName>
    <columns>E2CP__prefcat__c</columns>
    <columns>NAME</columns>
    <columns>E2CP__prefval__c</columns>
    <columns>E2CP__preflong__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Preferences</label>
</ListView>